# phobia

./: CMakeLists.txt  README.md
assets/shaders/: basic.frag
src/: main.cpp
src/core/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  stb_image_impl.cpp
src/utils/: FileLoader.cpp  FileLoader.h
